@@ -4,6 +4,7 @@
 	* Quest leaders can smash rocks when angry (from SporkHack)
 	* Blackmarket shopkeeper can smash rocks when angry
 	* Strength bonus for two-handed weaponry is doubled. (from SporkHack)
+	* Tins made from giant turtles are delicious and nutritious (by Bernard Helyer)
 
 	* Gauntlets of power give +7 damage bonus to differentiate
 	  from 18/** (from SporkHack)
